--- a/manifest.json
+++ b/manifest.json
@@ -22,9 +22,13 @@
     ],
     "web_accessible_resources": [
         {
-            "resources": ["dino/*", "dino/assets/*"],
+            "resources": ["dino/*", "dino/assets/*", "dino/mediapipe/*"],
             "matches": ["<all_urls>"]
         }
     ],
-    "permissions": ["declarativeNetRequest", "storage", "tabs"]
+    "permissions": ["declarativeNetRequest", "storage", "tabs"],
+    "content_security_policy": {
+        "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
+    }
+
 }
