--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
             "matches": ["<all_urls>"]
         }
     ],
-    "permissions": ["declarativeNetRequest", "storage", "tabs"],
+    "permissions": [],
     "content_security_policy": {
         "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
     }
