--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "Gesture Dino Runner",
-    "version": "1.0.0",
+    "name": "G-Rex",
+    "version": "1.1.0",
     "description": "A custom offline Dino game that can be controlled based on hand gestures.",
     "icons": {
         "16": "icons/logo-16.png",
@@ -23,7 +23,7 @@
     ],
     "web_accessible_resources": [
         {
-            "resources": ["dino/*", "dino/assets/*", "dino/mediapipe/*"],
+            "resources": ["game/*", "game/assets/*", "game/mediapipe/*"],
             "matches": ["<all_urls>"]
         }
     ],
