--- a/manifest.json
+++ b/manifest.json
@@ -4,16 +4,17 @@
     "version": "1.1.0",
     "description": "A custom offline Dino game that can be controlled based on hand gestures.",
     "icons": {
-        "16": "icons/logo-16.png",
-        "48": "icons/logo-48.png",
-        "128": "icons/logo-128.png"
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
     },
     "background": {
         "service_worker": "dist/background.js"
     },
     "action": {
         "default_title": "Play Dino Game",
-        "default_icon": "icons/logo-128.png"
+        "default_icon": "icons/icon128.png"
     },
     "content_scripts": [
         {
