--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "G-Rex",
-    "version": "1.1.0",
-    "description": "A custom offline Dino game that can be controlled based on hand gestures.",
+    "version": "2.0.0",
+    "description": "A custom offline dino game that can be controlled based on hand gestures.",
     "icons": {
         "16": "icons/icon16.png",
         "32": "icons/icon32.png",
